cmd/api-manager/k8s/02-strip-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-manager-prefix
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /api/api-manager
