cmd/api-manager/k8s/01-api-manager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-manager
  namespace: kube-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-manager
  template:
    metadata:
      labels:
        app: api-manager
    spec:
      containers:
      - name: api-manager
        image: uhub.service.ucloud.cn/entropypool/api-manager:latest
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: api-manager
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 50220
    targetPort: 50220
  - name: grpc
    port: 50221
    targetPort: 50221
  - name: prometheus
    port: 50222
    targetPort: 50222
  selector:
    app: api-manager
