cmd/api-manager/k8s/04-traefik-vpn-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-manager-treafik-vpn-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: api-manager-traefik-vpn
    k8s.kuboard.cn/workload: api-manager-traefik-vpn
    kubernetes.io/ingress.class: "traefik-internet-vpn"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-strip-api-manager-prefix@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd,
                                                      kube-system-headers-appid-to-body@kubernetescrd,
                                                      kube-system-headers-userid-to-body@kubernetescrd,
                                                      kube-system-headers-app-login-token-to-body@kubernetescrd,
                                                      kube-system-app-rbac-auth@kubernetescrd

spec:
  rules:
    - host: api.npool.top
      http: &http_rules
        paths:
          - path: /api/api-manager/v1/get/apis
            backend:
              serviceName: api-manager
              servicePort: 50220
    - host: api.procyon.vip
      http: *http_rules
    - host: api.xpool.top
      http: *http_rules
